# windows-license-inspector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: license-inspector.manifest  main.cpp
src/common/: evidence_weights.h  license_parser.h  remediation_engine.h  types.h  utils.cpp  utils.h
src/core/: dlv_collector.cpp  dlv_collector.h  event_log_query.cpp  event_log_query.h  firmware_provider.h  license_cache.cpp  license_cache.h  registry_query.cpp  registry_query.h  service_query.cpp  service_query.h  sys_path.cpp  sys_path.h  wmi_query.cpp  wmi_query.h
src/modules/: module_a_windows.cpp  module_a_windows.h  module_b_office.cpp  module_b_office.h
src/ui/: console_ui.cpp  console_ui.h
